[#605][J9][Wizard] Surefire UI Tests dont run
Signed-off-by: Christian Dietrich <christian.dietrich@itemis.de>